fixed safari layout issues

--- a/app/static/css/discontinuityboard.css
+++ b/app/static/css/discontinuityboard.css
@@ -310,31 +310,6 @@ p {
     padding: 7px 20px;
 }
 
-/* pi beginning options */
-
-#register-login {
-    text-align: center;
-    position: absolute;
-}
-
-#register-login, #register-login div {
-    width: 100%;
-    height: 100%;
-}
-
-#register-login .center {
-    display: inline-flex;
-
-}
-
-#register-login #register-button {
-    margin-right: 1px;
-}
-
-#register-login #login-button {
-    margin-left: 1px;
-}
-
 /* pi phototools */
 #logout {
     color: inherit;
@@ -371,6 +346,29 @@ p {
     overflow: hidden;
     float: left;
     margin: 5px;
+}
+
+/* pi beginning options,
+needs to be after dropdowns for safari */
+
+#register-login {
+    text-align: center;
+    position: relative;
+    min-width: 700px;
+}
+
+#register-login #register-button {
+    margin-right: 1px;
+}
+
+#register-login #login-button {
+    margin-left: 1px;
+}
+
+#register-button, #login-button {
+    padding: 100px;
+    font-size: 2em;
+
 }
 
 /* For resizable */
